--- a/journals/2021_01_14.org
+++ b/journals/2021_01_14.org
@@ -1,4 +1,5 @@
 #+TITLE: Jan 14th, 2021
 
-** aujourd'hui je commence à utiliser logseq pour créer les notes de [[CFD]] & [[projet Patran M2]]
+** aujourd'hui je commence à utiliser logseq pour créer les notes de [[CFD]] & [[projet Patran M2]] & [[thèse]]
+**
 **
