--- a/pages/cfd.org
+++ b/pages/cfd.org
@@ -1,6 +1,6 @@
 #+TITLE: CFD
 
-** Théorie --  []tuto de Fluent : https://confluence.cornell.edu/display/SIMULATION/The+Blackbox
+** Théorie --  [tuto de Fluent] : (https://confluence.cornell.edu/display/SIMULATION/The+Blackbox)
 *** the most important: *Pre-analysis*!!!
  physical principles and assumptions to get a mathematical model. 
 During this part, we can do some estimates or hand calculations or experimental data to have some ideas of what the results need to be.
