--- a/pages/thèse.org
+++ b/pages/thèse.org
@@ -1,3 +1,4 @@
 #+TITLE: thèse
 
-** 
+** à la recherche d'une proposition de thèse, je collecte également les [[outils de recherche]] qui vons me servir
+**
