--- a/pages/outils_de_recherche.org
+++ b/pages/outils_de_recherche.org
@@ -4,5 +4,8 @@
 
 ***
 #+BEGIN_TIPS
-1.
+1. google scholar (https://scholar.google.com)  
+2. bibliothèque universitaire en ligne (https://portaildoc.univ-lyon1.fr/) 
+3. wikipedia de préférence en anglais 
+4. youtube avec bons mots clé
 #+END_TIPS
