--- a/pages/outils_de_recherche.org
+++ b/pages/outils_de_recherche.org
@@ -5,7 +5,7 @@
 ***
 #+BEGIN_TIP
 1. [[https://scholar.google.com][google scholar]] 
-2. bibliothèque universitaire en ligne (https://portaildoc.univ-lyon1.fr/) 
+2. [[https://portaildoc.univ-lyon1.fr/][bibliothèque universitaire en ligne]]
 3. wikipedia de préférence en anglais 
 4. youtube avec bons mots clé
 #+END_TIP
