--- a/pages/thèse.org
+++ b/pages/thèse.org
@@ -1,7 +1,7 @@
 #+TITLE: thèse
 
 ** à la recherche d'une proposition de thèse, je collecte également les [[outils de recherche]] qui vons me servir
-** le rendez-vous du 14/01/2021 avec M.Escriva:
+** le rendez-vous du 14/01/2021 avec M.Escriva sur le sujet d'exchangeur thermique:
 *** questions pour le rdv :
 1. sur quelle type (géométrie) d'échangeur? e.g. à tubes, à faisceau, à spirales, à plaque, à ailettes, à bloc, à fils fins, nouvelle géométrie...  
 Sachez que je travaille à l'entreprise sur des échangeurs à plaques, ils génèrent des tourbillons, réduisent des encrassement, ce qui permet de transférer la chaleur 
