--- a/pages/thèse.org
+++ b/pages/thèse.org
@@ -2,12 +2,11 @@
 
 ** à la recherche d'une proposition de thèse, je collecte également les [[outils de recherche]] qui vons me servir
 ** le rendez-vous du 14/01/2021 avec M.Escriva sur le sujet d'exchangeur thermique:
-*** LATER 1. sur quelle [[type d'échangeur]]? e.g. à tubes, à faisceau, à spirales, à plaque, à ailettes, à bloc, à fils fins, nouvelle géométrie...  
+*** LATER 1. sur quelle [[type d'échangeur]]? , ils génèrent des tourbillons, réduisent des encrassement, ce qui permet de transférer la chaleur 
 :PROPERTIES:
 :later: 1610644527844
 :done: 1610644525821
 :END:
-Sachez que je travaille à l'entreprise sur des échangeurs à plaques, ils génèrent des tourbillons, réduisent des encrassement, ce qui permet de transférer la chaleur 
 流速↓，表面传热系数↓，污垢热阻↑，流体阻力↓；
 流速↑，表面传热系数↑，污垢热阻↓，流体阻力↑。没有阻力而流速太快的话无法传热
 *** TODO  2. on va effectuer des essais expérimentaux ? par exemple pour déterminer le coefficient de transfert ou de convection
