--- a/pages/type_d'échangeur.org
+++ b/pages/type_d'échangeur.org
@@ -1,4 +1,6 @@
 #+TITLE: type d'échangeur
 
-** *Géométries*:e.g. à tubes, à faisceau, à spirales, à plaque, à ailettes, à bloc, à fils fins, nouvelle géométrie...  
+** *Géométries*:
+*** à tubes
+*** à faisceau, à spirales, à plaque, à ailettes, à bloc, à fils fins, nouvelle géométrie...  
 Sachez que je travaille à l'entreprise sur des échangeurs à plaques
