--- a/pages/type_d'échangeur.org
+++ b/pages/type_d'échangeur.org
@@ -2,5 +2,11 @@
 
 ** *Géométries*:
 *** à tubes
-*** à faisceau, à spirales, à plaque, à ailettes, à bloc, à fils fins, nouvelle géométrie...  
+*** à faisceau
+*** à spirales
+*** à plaque
+*** à ailettes
+*** à bloc
+*** à fils fins
+*** nouvelle géométrie...  
 Sachez que je travaille à l'entreprise sur des échangeurs à plaques
