--- a/pages/thèse.org
+++ b/pages/thèse.org
@@ -2,13 +2,11 @@
 
 ** à la recherche d'une proposition de thèse, je collecte également les [[outils de recherche]] qui vons me servir
 ** le rendez-vous du 14/01/2021 avec M.Escriva sur le sujet d'exchangeur thermique:
-*** LATER 1. sur quelle [[type d'échangeur]]? , ils génèrent des tourbillons, réduisent des encrassement, ce qui permet de transférer la chaleur 
+*** LATER 1. sur quelle [[type d'échangeur]]? 
 :PROPERTIES:
 :later: 1610644527844
 :done: 1610644525821
 :END:
-流速↓，表面传热系数↓，污垢热阻↑，流体阻力↓；
-流速↑，表面传热系数↑，污垢热阻↓，流体阻力↑。没有阻力而流速太快的话无法传热
 *** TODO  2. on va effectuer des essais expérimentaux ? par exemple pour déterminer le coefficient de transfert ou de convection
 *** TODO  3. l'objectif de la thèse? 
 le but de mon alternance à l'entreprise: déterminer un modèle sur openFoam de perte de charge dédié au four de chez EFR, et un modèle de transfert thermique
