Logseq auto save

--- a/pages/type_d'échangeur.org
+++ b/pages/type_d'échangeur.org
@@ -9,4 +9,4 @@
 *** à bloc
 *** à fils fins
 *** nouvelle géométrie...  
-Mon [[travail à l'entreprise]] est sur des échangeurs à plaques
+Mon [[travail à l'entreprise]] est sur des [[échangeurs à plaques]]
