--- a/pages/travail_à_l'entreprise.org
+++ b/pages/travail_à_l'entreprise.org
@@ -1,3 +1,3 @@
 #+TITLE: travail à l'entreprise
 
-**
+** Je me suis concentrée sur la [[perte de charge]] jusqu'à présent, mais prochainement i.e. à partir du mois de mars, je vais aborder la partie thermique, d
