--- a/pages/thèse.org
+++ b/pages/thèse.org
@@ -17,4 +17,5 @@ le but de mon alternance à l'entreprise: déterminer un modèle sur openFoam de
 *** Conclusion:
 **** c'est M.Cressel qui envisage de proposer une thèse sur l'échangeur à spirale (à confirmer...), alors que M.Escriva serait le co-encadrant notamment pour OpenFOAM.
 **** On pourrait faire des essais expérimentaux pour la validation.
-**** le prochaine rdv aura lieu
+****
+**** le prochaine rdv aura lieu autour du 21/01/2021 à l'école Centrale à Ecully.
