Logseq auto save

--- a/pages/travail_à_l'entreprise.org
+++ b/pages/travail_à_l'entreprise.org
@@ -3,4 +3,5 @@
 ** Je me suis concentrée sur la [[perte de charge]] jusqu'à présent, mais prochainement i.e. à partir du mois de mars, je vais aborder la partie thermique, d'où:
 *** [[coefficient de transfert]]
 *** [[convection]]
-**
+** Objectif de mon alternance à l'entreprise:
+*** déterminer un modèle sur openFoam de perte de charge dédié au four de chez EFR, et un modèle de transfert thermique
