--- a/pages/CFD-théorie.org
+++ b/pages/CFD-théorie.org
@@ -1,4 +1,4 @@
-#+TITLE: CFD
+#+TITLE: CFD-théorie
 
 ** Théorie -- [[https://confluence.cornell.edu/display/SIMULATION/FLUENT+Learning+Modules][tuto de Fluent]]:
 *** the most important: *Pre-analysis*!!!
