--- a/pages/CFD-théorie.org
+++ b/pages/CFD-théorie.org
@@ -1,6 +1,5 @@
-#+TITLE: CFD-théorie
+#+TITLE: CFD
 
-** Théorie -- [[https://confluence.cornell.edu/display/SIMULATION/FLUENT+Learning+Modules][tuto de Fluent]]:
 *** the most important: *Pre-analysis*!!!
  physical principles and assumptions to get a mathematical model. 
 During this part, we can do some estimates or hand calculations or experimental data to have some ideas of what the results need to be.
