--- a/journals/2021_01_14.org
+++ b/journals/2021_01_14.org
@@ -1,5 +1,5 @@
 #+TITLE: Jan 14th, 2021
 
-** aujourd'hui je commence à utiliser logseq pour créer les notes de [[CFD]] & [[projet Patran M2]] & [[thèse]]
+** aujourd'hui je commence à utiliser logseq pour créer les notes de [[CFD]] [[CFD cours]] & [[projet Patran M2]] & [[thèse]]
 **
 **
