--- a/pages/cfd_cours.org
+++ b/pages/cfd_cours.org
@@ -5,4 +5,5 @@
 *** the most important: *Pre-analysis*!!!
  physical principles and assumptions to get a mathematical model. 
 During this part, we can do some estimates or hand calculations or experimental data to have some ideas of what the results need to be.
-***
+*** solver uses the mathematical model to generate a numerical solution
+**
