Logseq auto save

--- a/pages/cfd_cours.org
+++ b/pages/cfd_cours.org
@@ -6,4 +6,5 @@
  physical principles and assumptions to get a mathematical model. 
 During this part, we can do some estimates or hand calculations or experimental data to have some ideas of what the results need to be.
 *** solver uses the mathematical model to generate a numerical solution
-**
+** Cous de M2
+***
