--- a/pages/solution_numérique.org
+++ b/pages/solution_numérique.org
@@ -1,4 +1,4 @@
 #+TITLE: solution numérique
 
 ** aspect mathématique:
-*** Equations algébriques *non linéaire*: i.e. le comportement du système n'est pas linéaire, la sortie n'est pas proportionaire que l'entrée.
+*** Equations algébriques *non linéaire*: i.e. le comportement du système n'est pas linéaire, la sortie n'est pas proportionnelle que l'entrée.
