Logseq auto save

--- a/pages/cfd_cours.org
+++ b/pages/cfd_cours.org
@@ -1,7 +1,7 @@
 #+TITLE: CFD cours
 
+** Computational fluid dynamics
 ** [[https://confluence.cornell.edu/display/SIMULATION/FLUENT+Learning+Modules][Tuto de Fluent]]
-
 *** the most important: *Pre-analysis*!!!
  physical principles and assumptions to get a mathematical model. 
 During this part, we can do some estimates or hand calculations or experimental data to have some ideas of what the results need to be.
