--- a/pages/cfd_cours.org
+++ b/pages/cfd_cours.org
@@ -1,6 +1,7 @@
 #+TITLE: CFD cours
 
-** Computational fluid dynamics a comme avantage:
+** Computational fluid dynamics a comme
+*** avantage:
 ** [[https://confluence.cornell.edu/display/SIMULATION/FLUENT+Learning+Modules][Tuto de Fluent]]
 *** the most important: *Pre-analysis*!!!
  physical principles and assumptions to get a mathematical model. 
