Logseq auto save

--- a/pages/cfd_cours.org
+++ b/pages/cfd_cours.org
@@ -2,6 +2,7 @@
 
 ** Computational fluid dynamics a comme
 *** avantage ou gain de temps:
+**** éviter les prototypes physiques couteux
 ****
 ** [[https://confluence.cornell.edu/display/SIMULATION/FLUENT+Learning+Modules][Tuto de Fluent]]
 *** the most important: *Pre-analysis*!!!
