--- a/pages/cfd_cours.org
+++ b/pages/cfd_cours.org
@@ -3,7 +3,9 @@
 ** Computational fluid dynamics a comme
 *** avantage ou gain de temps:
 **** éviter les prototypes physiques couteux
-****
+*** limtes:
+**** pertinence du modèle à vérifier
+**** hypothèses intrinsèques des logiciels commercials cachées
 ** [[https://confluence.cornell.edu/display/SIMULATION/FLUENT+Learning+Modules][Tuto de Fluent]]
 *** the most important: *Pre-analysis*!!!
  physical principles and assumptions to get a mathematical model. 
