--- a/pages/cfd_cours.org
+++ b/pages/cfd_cours.org
@@ -5,7 +5,7 @@
 **** éviter les prototypes physiques couteux
 *** limtes:
 **** pertinence du modèle à vérifier
-**** hypothèses intrinsèques des logiciels commercials cachées
+**** hypothèses intrinsèques des logiciels commerciaux cachées
 ** [[https://confluence.cornell.edu/display/SIMULATION/FLUENT+Learning+Modules][Tuto de Fluent]]
 *** the most important: *Pre-analysis*!!!
  physical principles and assumptions to get a mathematical model. 
