--- a/pages/cfd_cours.org
+++ b/pages/cfd_cours.org
@@ -2,7 +2,7 @@
 
 ** Computational fluid dynamics ou la simulation sur ordinateur a comme
 *** intérêt:
-**** réaliser un grand nombre d'études avant les prototypes physiques couteux
+**** réaliser un grand nombre d'études avant les prototypes matériels couteux
 *** limtes:
 **** pertinence du modèle à vérifier
 **** hypothèses intrinsèques des logiciels commerciaux cachées
