--- a/pages/cfd_cours.org
+++ b/pages/cfd_cours.org
@@ -3,6 +3,7 @@
 ** Computational fluid dynamics ou la simulation sur ordinateur a comme
 *** intérêt:
 **** réaliser un grand nombre d'études avant les prototypes matériels couteux,  c'est un gain de temps
+**** mener des analyses paramétrées pour chercher une solution optimale.
 *** limtes:
 **** pertinence du modèle à vérifier
 **** hypothèses intrinsèques des logiciels commerciaux cachées
