--- a/pages/cfd_cours.org
+++ b/pages/cfd_cours.org
@@ -4,6 +4,7 @@
 *** intérêt:
 **** réaliser un grand nombre d'études avant les prototypes matériels couteux,  c'est un gain de temps.
 **** mener des analyses paramétrées pour chercher une solution optimale.
+**** capitaliser les connaissances et les progrès pour les évolutions futures(pour les entreprise)
 *** limtes:
 **** pertinence du modèle à vérifier
 **** hypothèses intrinsèques des logiciels commerciaux cachées
