--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -9,5 +9,4 @@
 **** tridimensionnel
 **** rotationnel
 **** difficilement prédictibles (ex: météorologie)
-*** La turbulence dans les écoulements de fluide est un phénomène encore imparfaitement compris,
-pour lequel il n’existe pas de théorie complète.
+*** La turbulence dans les écoulements de fluide est un phénomène encore imparfaitement compris, pour lequel il n’existe pas de théorie complète.
