--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -10,3 +10,4 @@
 **** rotationnel
 **** difficilement prédictibles (ex: météorologie)
 *** La turbulence dans les écoulements de fluide est un phénomène encore imparfaitement compris, pour lequel il n’existe pas de théorie complète.
+**** On sait que ce phénomène est décrit par les équations de Navier-Stokes et qu’il traduit un comportement particulier des solutions de ces équations.
