--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -11,3 +11,4 @@
 **** difficilement prédictibles (ex: météorologie)
 *** La turbulence dans les écoulements de fluide est un phénomène encore imparfaitement compris, pour lequel il n’existe pas de théorie complète.
 **** On sait que ce phénomène est décrit par les équations de Navier-Stokes et qu’il traduit un comportement particulier des solutions de ces équations.
+**** Les propriétés considérées comme génériques n'ont pas été prouvées rigoureusement.
