Logseq auto save

--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -1,7 +1,7 @@
 #+TITLE: cours de Turbulence
 
 ** Chap1 Introduction à l'étude des écoulements turbulents
-
+*** Introduction
 *** signification du qualificatif "turbulent":
 **** irrégulier dans le temps et dans l'espace
 **** ^^très sensible aux conditions initiales^^
