--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -2,14 +2,14 @@
 
 ** Chap1 Introduction à l'étude des écoulements turbulents
 *** Introduction
-*** signification du qualificatif "turbulent":
-**** irrégulier dans le temps et dans l'espace
-**** ^^très sensible aux conditions initiales^^
-**** d'apparence aléatoire
-**** tridimensionnel
-**** rotationnel
-**** difficilement prédictibles (ex: météorologie)
-*** La turbulence dans les écoulements de fluide est un phénomène encore imparfaitement compris, pour lequel il n’existe pas de théorie complète.
-**** On sait que ce phénomène est décrit par les équations de Navier-Stokes et qu’il traduit un comportement particulier des solutions de ces équations.
-**** Les propriétés considérées comme génériques n'ont pas été prouvées rigoureusement.
-**** Les modèles permettant la prédiction numérique sont plut au moins empiriques, ils utilisent un mode de description statistique.
+**** signification du qualificatif "turbulent":
+***** irrégulier dans le temps et dans l'espace
+***** ^^très sensible aux conditions initiales^^
+***** d'apparence aléatoire
+***** tridimensionnel
+***** rotationnel
+***** difficilement prédictibles (ex: météorologie)
+**** La turbulence dans les écoulements de fluide est un phénomène encore imparfaitement compris, pour lequel il n’existe pas de théorie complète.
+***** On sait que ce phénomène est décrit par les équations de Navier-Stokes et qu’il traduit un comportement particulier des solutions de ces équations.
+***** Les propriétés considérées comme génériques n'ont pas été prouvées rigoureusement.
+***** Les modèles permettant la prédiction numérique sont plut au moins empiriques, ils utilisent un mode de description statistique.
