--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -13,4 +13,6 @@
 ***** On sait que ce phénomène est décrit par les équations de Navier-Stokes et qu’il traduit un comportement particulier des solutions de ces équations.
 ***** Les propriétés considérées comme génériques n'ont pas été prouvées rigoureusement.
 ***** Les modèles permettant la prédiction numérique sont plut au moins empiriques, ils utilisent un mode de description statistique.
-***
+*** Deux exemples de transition laminaire-turbulent
+**** Expérience d’Osborne Reynolds (1842–1912)
+*****
