--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -15,4 +15,4 @@
 ***** Les modèles permettant la prédiction numérique sont plut au moins empiriques, ils utilisent un mode de description statistique.
 *** Deux exemples de transition laminaire-turbulent
 **** Expérience d’Osborne Reynolds (1842–1912)
-*****
+***** Le nombre de Reynolds indique une transition entre le régime laminaire et turbulent
