Logseq auto save

--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -15,5 +15,5 @@
 ***** Les modèles permettant la prédiction numérique sont plut au moins empiriques, ils utilisent un mode de description statistique.
 *** Deux exemples de transition laminaire-turbulent
 **** Expérience d’Osborne Reynolds (1842–1912)
-***** Le nombre de Reynolds indique une transition entre régime laminaire et turbulent. Rq: -Re- dépend du niveau de perturbation, e.g.  le critère courant pour le calcul des pertes de charge en tuyau: _Re=2000_
+***** Le nombre de Reynolds indique une transition entre régime laminaire et turbulent. Rq: _Re_ dépend du niveau de perturbation, e.g.  le critère courant pour le calcul des pertes de charge en tuyau: _Re=2000_
 *****
