--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -19,4 +19,5 @@
 ****** e.g. Un écoulement de fluide de viscosité ν arrive avec une vitesse unforme U∞x sur un cylindre de diamètre D = 2R, d’axe (O, z) normal à x. Le nombre de Reynolds est défini par
 R e =U∞D/ν
 ***** Malgré la simplicité de sa géométrie, l’écoulement de Poiseuille est en fait très complexe. Tous les écoulements ne présentent pas ce caractère.
-****
+**** Sillage derrière un cylindre
+***** Pour [[CFD pratique]]
