--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -6,5 +6,5 @@
 **** un écoulement de fluide de viscosité $$mu=1$$ arrive avec une vitesse uniforme $$U=1$$ sur un cylindre de diamètre $$D=1$$
 *** Résultats en fonctions de Re
 ****
-$$Re=1$$ écoulement stationnaire, symétrique. Pas de tourbillons derrière le cylindre mais
+$$Re=1$$ écoulement stationnaire, symétrique. Pas de tourbillons derrière le cylindre. Les vitesses max se trouvent au deux côté du cylindre.
 ****
