--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -5,7 +5,9 @@
 **** un écoulement de fluide de viscosité $$mu=1$$ arrive avec une vitesse uniforme $$U=1$$ sur un cylindre de diamètre $$D=1$$
 *** Résultats en fonctions de Re
 ****
-$$Re=1$$ écoulement stationnaire, symétrique. Pas de tourbillons derrière le cylindre. Les vitesses max se trouvent aux deux côtés du cylindre.
+$$Re=1$$ écoulement stationnaire, symétrique. 
+Pas de tourbillons derrière le cylindre. 
+Les vitesses max se trouvent aux deux côtés du cylindre.
 ****
 $$Re=6$$ NB: pour augmenter le nombre de Reynolds, on diminue la valeur de viscosité dans _constant/transportProperties_
 ****
