--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -16,5 +16,6 @@ Rq: le calcul s'arrête avec un nombre d'itération plus élevé que Re=1, il a 
 Rq: en ^^raffinant^^ le maillage, le nombre d'itération augmente. On retrouve les mêmes résultats que le 1er maillage, donc on peut conclure que pour un cas de calcul aussi simple que celui-ci, le 1er maillage est suffisant à l'égard de convergence.
 ****
 $$Re=40$$
+tourbillons à l'arrière du cylindre, la
 ****
 ****
