--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -16,6 +16,7 @@ Rq: le calcul s'arrête avec un nombre d'itération plus élevé que Re=1, il a 
 Rq: en ^^raffinant^^ le maillage, le nombre d'itération augmente. On retrouve les mêmes résultats que le 1er maillage, donc on peut conclure que pour un cas de calcul aussi simple que celui-ci, le 1er maillage est suffisant à l'égard de convergence.
 ****
 $$Re=40$$
-tourbillons à l'arrière du cylindre, la
+tourbillons à l'arrière du cylindre. Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. perte de symétrie
+****
 ****
 ****
