--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -4,7 +4,7 @@
 *** Case set-up:
 **** un écoulement de fluide de viscosité $$mu=1$$ arrive avec une vitesse uniforme $$U=1$$ sur un cylindre de diamètre $$D=1$$
 *** Résultats en fonctions de Re
-**** écoulement stationnaire
+**** écoulement stationnaire avec _simpleFoam_
 ****
 $$Re=1$$ 
 N'est pas aussi symétrique que dans l'essai expérimental. 
