--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -5,17 +5,17 @@
 **** un écoulement de fluide de viscosité $$mu=1$$ arrive avec une vitesse uniforme $$U=1$$ sur un cylindre de diamètre $$D=1$$
 *** Résultats en fonctions de Re
 **** écoulement stationnaire avec _simpleFoam_
-****
+*****
 $$Re=1$$ 
 N'est pas aussi symétrique que dans l'essai expérimental. 
 Pas de tourbillons derrière le cylindre. 
 Les vitesses max se trouvent aux deux côtés du cylindre.
-*****
+******
 $$Re=6$$ NB: pour augmenter le nombre de Reynolds, on diminue la valeur de viscosité dans _constant/transportProperties_
 Résultat très resemblable que Re=1.
-****** Remarques sur la [[convergence]]
-******* Rq: le calcul s'arrête avec un nombre d'itération plus élevé que Re=1, il a besoin de résoudre plus d'équations pour converger.
-******* Rq: en ^^raffinant^^ le maillage, le nombre d'itération augmente. On retrouve les mêmes résultats que le 1er maillage, donc on peut conclure que pour un cas de calcul aussi simple que celui-ci, le 1er maillage est suffisant à l'égard de convergence.
+******* Remarques sur la [[convergence]]
+******** Rq: le calcul s'arrête avec un nombre d'itération plus élevé que Re=1, il a besoin de résoudre plus d'équations pour converger.
+******** Rq: en ^^raffinant^^ le maillage, le nombre d'itération augmente. On retrouve les mêmes résultats que le 1er maillage, donc on peut conclure que pour un cas de calcul aussi simple que celui-ci, le 1er maillage est suffisant à l'égard de convergence.
 ****
 $$Re=40$$
 tourbillons à l'arrière du cylindre. Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. perte de symétrie
