--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -21,4 +21,5 @@ $$Re=40$$
 tourbillons à l'arrière du cylindre. Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. perte de symétrie
 ****
 ****
-****
+**** dooj
+***
