--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -9,10 +9,7 @@
 $$Re=1$$ 
 N'est pas aussi symétrique que dans l'essai expérimental. 
 Pas de tourbillons derrière le cylindre. 
-Les vitesses max se trouvent aux deux côtés du cylindre
-******
-******
-$$Re=6$$ NB: pour augmenter le nombre de Reynolds, on diminue la valeur de viscosité dans _constant/transportProperties_
+Les vitesses max se trouvent aux deux côtés du cylindre $$Re=6$$ NB: pour augmenter le nombre de Reynolds, on diminue la valeur de viscosité dans _constant/transportProperties_
 Résultat très resemblable que Re=1.
 ******* Remarques sur la [[convergence]]
 ******** Rq: le calcul s'arrête avec un nombre d'itération plus élevé que Re=1, il a besoin de résoudre plus d'équations pour converger.
