--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -21,6 +21,6 @@ $$Re=40$$
 tourbillons à l'arrière du cylindre. Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. perte de symétrie
 **** écoulement instationnaire avec _pimpleFoam_
 *****
-$$Re=40$$
+$$Re=40$$ au bout de 40 secondes
 **** dooj
 ***
