Logseq auto save

--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -17,8 +17,7 @@ Résultat très resemblable que Re=1.
 ******* Rq: le calcul s'arrête avec un nombre d'itération plus élevé que Re=1, il a besoin de résoudre plus d'équations pour converger.
 ******* Rq: en ^^raffinant^^ le maillage, le nombre d'itération augmente. On retrouve les mêmes résultats (Umax=1,7 m/s) que le 1er maillage, donc on peut conclure que pour un cas de calcul aussi simple que celui-ci, le 1er maillage est suffisant à l'égard de la convergence.
 *****
-$$Re=40$$
-tourbillons à l'arrière du cylindre. Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. perte de symétrie
+$$Re=40$$ Tourbillons à l'arrière du cylindre. Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. perte de symétrie
 **** écoulement instationnaire avec _pimpleFoam_
 *****
 $$Re=40$$ au bout de 40 secondes, je mesure toutes les 2 secondes mais le calcul se fait toutes les 0,001 secondes.
