--- a/pages/convergence.org
+++ b/pages/convergence.org
@@ -1,3 +1,4 @@
 #+TITLE: convergence
 
 ** plus le nombre de Reynolds est important, plus les équations à résoudre sont nombreuses, donc plus le nombre d'itérations est élevé, i.e. il nécessite un temps plus important pour atteindre la convergence. ^^idem pour un maillage plus fin^^
+** Nous avons remarqué que
