--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -19,7 +19,7 @@ Résultat très resemblable que Re=1.
 *****
 $$Re=40$$ Tourbillons à l'arrière du cylindre. 
 Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. perte de symétrie
-**** écoulement instationnaire avec _pimpleFoam_, Au bout de 40 secondes, je mesure toutes les 2 secondes mais le calcul se fait toutes les 0,001 secondes.
+**** écoulement instationnaire avec _pimpleFoam_. Au bout de 40 secondes, je mesure toutes les 2 secondes mais le calcul se fait toutes les 0,001 secondes.
 *****
 $$Re=1$$
 *****
