--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -21,3 +21,5 @@ R e =U∞D/ν
 ***** Malgré la simplicité de sa géométrie, l’écoulement de Poiseuille est en fait très complexe. Tous les écoulements ne présentent pas ce caractère.
 **** Sillage derrière un cylindre
 ***** Des observations expérimentales ont été représentées dans le cours, j'essaie de faire des calculs numériques dans [[CFD pratique]] pour retrouver les résultats.
+***** détachement tourbillonnaire (vortex shedding)
+***** allées de tourbillons de von Karman (vortex street)
