--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -22,7 +22,7 @@ Rq: il y a plus de tourbillons en bas de la ligne centrale qu'en haut, i.e. pert
 **** écoulement instationnaire avec _pimpleFoam_. Au bout de 40 secondes, je mesure toutes les 2 secondes mais le calcul se fait toutes les 0,001 secondes.
 *****
 $$Re=1$$ Le résultat n'a pas sens physique, ça indique que le problèm est mal posé.
-On doit savoir que pour une fluide de viscosité =1, arrive avec une vitesse initiale =1 sur un cylindre de diamètre =1, le comportement en réalité est stationnaire et laminair, on ne peut pas utiliser le solver instationnaire pour résoudre numériquement!! D'où l'intérêt de consulter les essais expérimentaux avant de lancer un calcul numérique, il faut savoir le sens physique!
+On doit savoir que pour une fluide de viscosité de 1, arrive avec une vitesse initiale de 1 sur un cylindre de diamètre =1, le comportement en réalité est stationnaire et laminair, on ne peut pas utiliser le solver instationnaire pour résoudre numériquement!! D'où l'intérêt de consulter les essais expérimentaux avant de lancer un calcul numérique, il faut savoir le sens physique!
 *****
 $$Re=40$$ 
 L'écoulement est instationnaire de 0 jusqu'à t=12, après lequel l'écoulement est stationnaire. Dans le cas instationnaire, on s'intéresse aux oscillations ou aux évolutions.
