--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -22,4 +22,5 @@ R e =U∞D/ν
 **** Sillage derrière un cylindre
 ***** Des observations expérimentales ont été représentées dans le cours, j'essaie de faire des calculs numériques dans [[CFD pratique]] pour retrouver les résultats.
 ***** détachement tourbillonnaire (vortex shedding)
+****** it takes place when a fluid past a bluff body (opposed to streamlined body)
 ***** allées de tourbillons de von Karman (vortex street)
