--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -26,6 +26,7 @@ On doit savoir que pour une fluide de viscosité de 1, arrive avec une vitesse i
 *****
 $$Re=40$$ 
 L'écoulement est instationnaire de 0 jusqu'à t=14, après lequel l'écoulement est stationnaire. Dans le cas instationnaire, on s'intéresse aux oscillations ou aux évolutions.
+Rq: en raffinant, l'écoulement devient toujours stationnaire en t=14.
 ****** Remarques sur la [[convergence]]:
 ******* La Umax=1,5 indique que le calcul n'a pas convergé, donc on raffine jusqu'au 2eme maillage. Alors qu'on obtient Umax=1,6 donc on raffine jusqu'au 3eme maillage. Mais Umax reste la même, on pourra étudier les causes ultérieurement, mais on va utiliser une erreur relative de 6% pour dire qu'il a convergé.
 ****
