--- a/pages/cfd_pratique.org
+++ b/pages/cfd_pratique.org
@@ -29,7 +29,7 @@ L'écoulement est instationnaire de 0 jusqu'à t=14, après lequel l'écoulement
 ****** Remarques sur la [[convergence]]:
 ******* La Umax=1,5 indique que le calcul n'a pas convergé, donc on raffine jusqu'au 2eme maillage. Alors qu'on obtient Umax=1,6 donc on raffine jusqu'au 3eme maillage. Mais Umax reste la même, on pourra étudier les causes ultérieurement, mais on va utiliser une erreur relative de 6% pour dire qu'il a convergé.
 ****** Remarques sur le [[maillage]]
-******* Certes, le 2eme et 3eme maillage ont un temps de calcul très important. Mais ils n'ont pas apporté des résultats très différents. Donc on peut conclure qu'un nombre d'élément = suffit pour un cas de calcul aussi simple.
+******* Certes, le 2eme et 3eme maillage ont un temps de calcul très important. Mais ils n'ont pas apporté des résultats très différents. Donc on peut conclure qu'un nombre d'élément = 17000 suffit pour un cas de calcul aussi simple.
 ******* En raffinant, l'écoulement devient toujours stationnaire en t=14.
 ****
 ***
