--- a/pages/maillage.org
+++ b/pages/maillage.org
@@ -1,4 +1,4 @@
 #+TITLE: maillage
 
-** Un nombre d'élément = 125000 a un temps de calcul important pour mon PC.
-**
+** Un nombre d'éléments = 125000 a un temps de calcul important pour mon PC.
+** Un nombre d'éléments
