--- a/pages/maillage.org
+++ b/pages/maillage.org
@@ -1,4 +1,4 @@
 #+TITLE: maillage
 
 ** Un nombre d'éléments = 125000 a un temps de calcul important pour mon PC.
-** Un nombre d'éléments
+** Un nombre d'éléments = 17000 suffit pour étudier le sillage en aval d'un cylindre.
