Logseq auto save

--- a/pages/maillage.org
+++ b/pages/maillage.org
@@ -2,4 +2,4 @@
 
 ** Un nombre d'éléments = 125000 a un temps de calcul important pour mon PC.
 ** Un nombre d'éléments = 17000 suffit pour étudier le sillage en aval d'un cylindre.
-** Pour comparer les résultats d'un cas en stationnaire avec ceux en instationnaire,
+** Quand on étudie un cas instationnaire, raffiner le maillge ne changerait pas le temps où le calcul devient stationnaire.
